# CyclotronResonance

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: CMakeLists.txt
processing/: manySimProcessing.ipynb  manySimProcessing.py  postProcLib.py  prodruns.py  scatterNumPlots.py  testRunComparisons.py
src/: CMakeLists.txt  global_vars.cpp  global_vars.hpp  main.cpp
src/core/: helper_functions.cpp  helper_functions.hpp  parallel_functions.cpp  parallel_functions.hpp  sim_types.cpp  sim_types.hpp
src/helper_objects/: ElectronDistb.cpp  ElectronDistb.hpp  Histogram.cpp  Histogram.hpp  Histogram2D.cpp  Histogram2D.hpp  NumericalDistb.cpp  NumericalDistb.hpp  Timer.cpp  Timer.hpp
src/science_functions/: beta_calculations.cpp  beta_calculations.hpp  cross_sections.cpp  cross_sections.hpp  sampling_functions.cpp  sampling_functions.hpp  scattering_functions.cpp  scattering_functions.hpp
test/: procDeciderTest.ipynb  procDeciderTest.py
